# nanoclaw

./: README.md  pyproject.toml
clawai/agent/: context.py  loop.py  memory.py  skills.py  subagent.py
clawai/bus/: events.py  queue.py
clawai/channels/: base.py  discord.py  feishu.py  manager.py  whatsapp.py
clawai/cli/: commands.py
clawai/config/: loader.py  schema.py
clawai/heartbeat/: service.py
clawai/llm/: base.py  litellm.py  transcription.py
clawai/scheduler/: service.py  types.py
clawai/session/: manager.py
clawai/skills/: README.md
clawai/tools/: base.py  filesystem.py  message.py  registry.py  schedule.py  shell.py  spawn.py  web.py
clawai/utils/: helpers.py
