[project]
name = "clawai"
version = "0.1.0-alpha"
description = "ClawAI is a lightweight, composable AI agent runtime for tool-driven workflows and autonomous task execution"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "ClawAI contributors" }
]

keywords = [
    "ai",
    "agent",
    "agent-runtime",
    "autonomous-agents",
    "llm",
    "tool-use",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]

integrations = [
    "websockets>=12.0",
    "websocket-client>=1.6.0",
    "python-telegram-bot>=21.0",
    "readability-lxml>=0.8.0",
]

automation = [
    "croniter>=2.0.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
claw = "clawai.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clawai"]

[tool.hatch.build]
include = [
    "clawai/**/*.py",
    "clawai/skills/**/*.md",
    "clawai/skills/**/*.sh",
]
